testfx/errors/error_tests/edge_43_main_global_literal.fx
// 测试：有main时全局变量赋字面量（应该成功）
count := 10
name := "hello"

main := () {
    print(count)
    print(name)
}
